Resolved some 'hover' issues on mobile.

--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -130,11 +130,7 @@
             color: $accent-color;
         }
     }
-    .project-container:hover .project-info {
-        visibility: visible;
-        transition: opacity 0.3s;
-        opacity: 1;
-    }
+
     .project-text .project-link:hover {
         transition: color 0.3s, border-color 0.3s;
         color: $accent-color;
